# fork-1xn-vmcp

./: README.md
.github/workflows/: ci.yml
backend/: architecture.md  pyproject.toml  redesign.md
backend/examples/: README.md  comprehensive_workflow.py  data_processing_workflow.py  explore_tools.py  math_workflow.py  weather_workflow.py
backend/src/: main.py
backend/src/sandbox-runtime-py/: .gitignore  QUICKSTART.md  README.md  SETUP_AND_TESTING.md  TESTING_SUMMARY.md  TEST_COVERAGE.md  debug_profile_gen.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_library.py
backend/src/sandbox-runtime-py/sandbox_runtime/: __init__.py  cli.py
backend/src/sandbox-runtime-py/sandbox_runtime/config/: __init__.py  schemas.py
backend/src/sandbox-runtime-py/sandbox_runtime/network/: __init__.py  bridge.py  http_proxy.py  socks_proxy.py
backend/src/sandbox-runtime-py/sandbox_runtime/sandbox/: __init__.py  linux_utils.py  macos_utils.py  manager.py  seccomp.py  utils.py  violation_store.py
backend/src/sandbox-runtime-py/sandbox_runtime/utils/: debug.py  platform.py  ripgrep.py
backend/src/sandbox-runtime-py/tests/: __init__.py  test_config_validation.py  test_configurable_proxy_ports.py  test_integration.py  test_macos_seatbelt.py  test_seccomp_filter.py  test_wrap_with_sandbox.py
backend/src/vmcp/: config.py
backend/src/vmcp/cli/: main.py
backend/src/vmcp/core/services/: oss_providers.py
backend/src/vmcp/data/: preconfigured-servers.json
backend/src/vmcp/mcps/: mcp_auth_manager.py  mcp_client.py  mcp_client_manager.py  mcp_configmanager.py  models.py  router_typesafe.py
backend/src/vmcp/proxy_server/: proxy_server.py  vmcp_session_manager.py
backend/src/vmcp/proxy_server/templates/: simple_unauthorized.html  unauthorized.html
backend/src/vmcp/scripts/: upload_and_import_1xndemo.py  upload_preconfigured_servers.py
backend/src/vmcp/server/: __init__.py  auth_service.py  mcp_dependencies.py  middleware.py  token_info.py  tool_descriptions.py  user_service.py  vmcp_mcp_server.py  vmcp_server.py  vmcp_session_manager.py
backend/src/vmcp/server/static/css/: unauthorized.css
backend/src/vmcp/server/templates/: simple_unauthorized.html  unauthorized.html
backend/src/vmcp/storage/: base.py  blob_router.py  dummy_user.py
backend/src/vmcp/vmcps/: default_prompts.py  list_tools.py  models.py  progressive_discovery_router.py  router_typesafe.py  sandbox_router.py  sandbox_service.py  stats_router.py  workflow_scheduler.py
backend/src/vmcp/vmcps/sandbox_config/: prompt_progressive_discovery.md  prompt_sdk_only.md
backend/src/vmcp/vmcps/sandbox_config/sandbox_tools/: tool_execute_bash.py  tool_execute_python.py
backend/src/vmcp/vmcps/vmcp_config_manager/: config_core.py  execution_core.py  logger.py  protocol_handler.py  resource_manager.py
backend/src/vmcp/vmcps/vmcp_config_manager/custom_tool_engines/: prompt_tool.py  python_tool.py  sandbox_tool.py
backend/src/vmcp_sdk/: __init__.py  active_vmcp.py  client.py  schema.py
backend/src/vmcp_sdk/cli/: __init__.py  main.py
backend/tests/: conftest.py  test_010_mcp_server_stdio_composition.py  test_01_vmcp_creation.py  test_02_mcp_server_integration.py  test_09_mcp_server_composition.py  test_progressive_discovery.py
backend/tests/mcp_server/: all_feature_server.py  everything_server.py  start_mcp_servers.py
frontend/: package.json
frontend/src/api/: client.ts
frontend/src/components/discover/: MCPServersDiscovery.tsx
frontend/src/components/ui/: switch.tsx
frontend/src/components/vmcp/: CodeEditor.tsx  EmptySandboxState.tsx  FileTree.tsx  MCPServersTab.tsx  SandboxTab.tsx  ServerDetailsModal.tsx
frontend/src/lib/data/: preconfigured-servers.json
frontend/src/pages/: ServersPage.tsx  StatsPage.tsx  VMCPDetailsPage.tsx  VMCPListPage.tsx
frontend/src/types/: vmcp.ts
frontend/src/utils/: fileIcons.ts
